fix te footer list on small screens,fix the hamburger icon to open tha nav-menue and make some css correction regarding this icon on different screen sizes

--- a/main.css
+++ b/main.css
@@ -409,7 +409,7 @@ footer a {
     width: 100;
     order: 5;
   }
-  #nav_menu {
+  .nav_menu {
     display: none;
   }
 }
@@ -452,15 +452,18 @@ footer a {
     order: 5;
   }
 }
+
 @media screen and (max-width: 599px) {
 .header__inner {
   font-size: 0.7em;
 }
+
   .header__logo {
     max-height: 50px;
     max-width: 50px;
     margin-left:2%;
     margin-bottom: 3%;
+    margin-right: 0;
 }
 
 .nav {
@@ -472,6 +475,7 @@ footer a {
   /* Optionally, we animate the drawer. */
   transition: transform 0.3s ease;
 }
+
 .nav__item {
     display: list-item;
     border-bottom: 1px solid #E0E0E0;
@@ -480,46 +484,102 @@ footer a {
     background-color: #E0E0E0;
 
   }
+
   .hero {
     z-index: -1;
   }
+
  nav.open {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 
-#nav_menu {
+.header__title {
+    vertical-align: bottom; 
+  }
+
+.nav_menu {
   min-width: 20px;
   min-height: 25px;
-  position: relative;
+  display: inline;
+  vertical-align: bottom;
+  margin-bottom: 25px;
+  margin-right: 0;
+
+    
+  }
 }
 
+@media screen and (min-width: 350px) {
+  .header__logo {
+    max-height: 50px;
+    max-width: 50px;
+
+  }
+  
+  .header__inner {
+    font-size: .6em;
+  }
+
+  .nav_menu {
+  min-width: 20px;
+  min-height: 24px;
+  float: right;
+  margin-top: 15px;
+  margin-right: 5px;
 }
 
-@media screen and (min-width: 450px) {
+footer {
+  width: 100%;
+  text-align: center;
+}
+
+footer ul li {
+  display: inline;
+  min-width: 48px;
+  min-height: 48px;
+  font-size: 0.9em;
+}
+
+}@media screen and (min-width: 450px) {
   .header__logo {
     max-height: 60px;
     max-width: 60px;
-  
+
   }
+  
   .header__inner {
     font-size: .75em;
   }
-  #nav_menu {
+
+  .nav_menu {
   min-width: 28px;
   min-height: 32px;
-  margin-left: 1%;
+  margin-right: 0;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+}
+
+footer ul li {
+  display: inline;
+  min-width: 48px;
+  min-height: 48px;
 }
 }
+
 @media screen and (min-width: 450px) and (max-width: 598){
   .header__inner {
     font-size: .9em;
     }
-  #nav_menu {
+
+  .nav_menu {
   min-width: 35px;
   min-height: 40px;
+  margin-right: 0;
 
 }
 }
-
 
